--- a/kitty.conf
+++ b/kitty.conf
@@ -1,2 +1,3 @@
-theme argonaut
-background_image /home/colorodo/Downloads/th-1524566410.jpg
+background_image /home/colorodo/Downloads/cute-sleepy-cat-jar-512x512-3246681103.png
+background_opacity 0.0
+background_image_layout tiled
